# cudaPcl

./: .gitignore  CMakeLists.txt  Makefile  README.md  tobuild.txt
cmake/: FindOptiX.cmake  FindSUtilGLUT.cmake  Macros.cmake
cuda/: bilateralFilter.cu  convolutionSeparable.cu  convolutionSeparable_wrap.cu  cuda_pcl_helpers.cu  guidedFilter.cu  integral.cu  optimizationSO3.cu  optimizationSO3_approx.cu  optimizationSO3_squared.cu  optimizationSO3_weighted.cu  surfelRender.cu  testReduction.cu
include/: cudaSphereHelpers.h  cuda_pc_helpers.h  cv_helpers.hpp  depthGuidedFilter.hpp  gpuMatrix.hpp  helper_cuda.h  helper_string.h  normalExtractCUDA.hpp  normalExtractSimpleGpu.hpp  opencvHelper.hpp  openniGrabber.hpp  openniSmoothDepth.hpp  openniSmoothDepthGpu.hpp  openniSmoothNormalsGpu.hpp  openniVisualizer.hpp  timer.hpp  timerLog.hpp
include/cudaPcl/: convolutionSeparable_common.h  convolutionSeparable_common_small.h  cv_helpers.hpp  depthGuidedFilter.hpp  depthGuidedFilter_impl.hpp  dirSeg.hpp  freenect2Grabber.hpp  gpuMatrix.hpp  helper_cuda.h  normalExtractSimpleGpu.hpp  normalExtractSimpleGpu_impl.hpp  openniGrabber.hpp  openniPyramid.hpp  openniSmoothDepth.hpp  openniSmoothDepthGpu.hpp  openniSmoothNormalsGpu.hpp  openniVisualizer.hpp  pcSeg.hpp  pcl_helpers.hpp  pinhole.h  realSenseSmoothNormalsGpu.hpp  root_includes.hpp  smoothNormalsGpu.hpp  surfel.hpp  timer.hpp  timerLog.hpp
include/deprecated/: gpuMatrix.hpp  opencvHelper.hpp
include/deprecated/nvidia/: convolutionSeparable_common.h
libRos/: CMakeLists.txt  README
optix/: CMakeLists.txt  box.cu  commonStructs.h  parallelogram.cu  tutorial.cpp  tutorial.h  tutorial0.cu  tutorial1.cu  tutorial10.cu  tutorial11.cu  tutorial2.cu  tutorial3.cu  tutorial4.cu  tutorial5.cu  tutorial6.cu  tutorial7.cu  tutorial8.cu  tutorial9.cu
python/: FolderComputeNormals.py  NYUcomputeNormals.py  NYUtransformRandomly.py  guidedFilter.py  integral.cu  integralImageGpu.py  testRgbdFrameNormals.py  testSurfNormalComp.py
src/: freenect2Visualizer.cpp  openniPyramid.cpp  openniSmoothDepth.cpp  openniSmoothNormals.cpp  openniSmoothNormals_file.cpp  pclAddNoiseOutliers.cpp  pclBenchmark.cpp  pclGrabber.cpp  pclNormals.cpp  pcl_helpers.cpp  pinhole.cpp  randomlyTransformPointClouds.cpp  realSenseSmoothNormalsGpuApp.cpp  renderPcFromPc.cpp  testReduction.cpp
src/deprecated/: normalExtractCUDA.cpp
test/: surfelRender.cpp  traversal.c
